# webcat

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE-header.txt  Makefile  README.md  TODO.md  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  test_port_4001.py  test_real_mcp_server.py
.github/: dependabot.yml
.github/workflows/: azure-function_webcatgpt.yml  ci.yml  dependabot-auto-merge.yml  docker-publish.yml  docker_mcp.yml  main_webcatgpt.yml
app/: app.py
assets/: README.md
customgpt/: function_app.py  local.settings.json  requirements.txt  run_tests.sh
customgpt/tests/: run_all_tests.py  test_function_app.py
docker/: .coveragerc  .env.example  Dockerfile  Dockerfile.nginx-simple  README.md  api_tools.py  build.sh  cli.py  constants.py  debug_search.py  demo_server.py  demo_utils.py  docker-compose-nginx.yml  docker-compose.yml  entrypoint-nginx.sh  health.py  mcp_server.py  nginx-auth.conf  nginx-single-image.conf  pytest.ini  requirements.txt  run_rest_test.sh  run_sse_test.sh  simple_demo.py  supervisord.conf  test_deep_research_mcp.py  test_demo.py  test_duckduckgo_fallback.py  test_mcp_client.py  test_mcp_no_auth.py  test_mcp_protocol.py  test_mcp_search_integration.py  test_nginx_auth.py  test_perplexity.py  test_perplexity_debug.py  test_perplexity_minimal.py  test_rest.py  test_search_functions.py  test_serper.py  test_serper_scrape_integration.py  (+3 more)
docker/clients/: duckduckgo_client.py  perplexity_client.py  serper_client.py  tavily_client.py
docker/endpoints/: __init__.py  app_factory.py  demo_client.py  health_endpoints.py
docker/mcp/: __init__.py  app.py  models.py  services.py  utils.py
docker/models/: api_responses.py  api_search_result.py  error_response.py  health_check_response.py  health_responses.py  search_response.py  search_result.py
docker/models/domain/: __init__.py  api_search_result.py  search_result.py
docker/models/responses/: __init__.py  api_responses.py  health_responses.py
docker/old_tests/: test_duckduckgo_fallback.py  test_serper.py
docker/services/: content_scraper.py  search_orchestrator.py  search_processor.py  search_service.py
docker/tests/: README.md  conftest.py  run_tests.sh  test_mcp_server.py
docker/tests/builders/: __init__.py  api_search_result_builder.py  search_result_builder.py
docker/tests/factories/: __init__.py  ddgs_factory.py  http_factories.py  http_response_factory.py  mock_ddgs.py  mock_ddgs_class.py  mock_ddgs_context_manager.py  mock_ddgs_search_client.py  mock_http_response.py  mock_perplexity_response.py  mock_serper_response.py  perplexity_response_factory.py  serper_response_factory.py
docker/tests/unit/clients/: test_duckduckgo_client.py  test_duckduckgo_client_with_library.py  test_duckduckgo_client_without_library.py  test_perplexity_client.py  test_serper_client.py
docker/tests/unit/models/: test_api_search_result.py  test_error_response.py  test_health_check_response.py  test_models.py  test_search_response.py  test_search_result.py
docker/tests/unit/services/: test_content_scraper.py  test_search_processor.py  test_search_service.py  test_search_service_with_serper.py  test_search_service_without_serper.py
docker/tests/unit/services/content_scraper/: test_edge_cases.py  test_error_cases.py  test_success_cases.py
docker/tests/unit/tools/: test_deep_research_tool.py  test_health_check_tool.py  test_search_tool.py
docker/tests/unit/utils/: test_auth.py  test_logging_config.py
docker/tools/: api_tools_setup.py  deep_research_tool.py  health_check_tool.py  search_tool.py
docker/utils/: auth.py  logging_config.py
examples/: README.md  webcat_client.html
service/: webcat.service
src/: function_app.py  local.settings.json  requirements.txt  run_tests.sh
src/WebCat/: function_app.py
tests/: run_all_tests.py  run_tests.py  test_function_app.py
